# Bazel module — Bzlmod-style (Bazel 7+) build for the Go binaries
# and their OCI image packaging.
#
# Scope (P19):
#   - dist-server   (./server, github.com/llama-distributed/server)
#   - dist-turn     (./cmd/dist-turn, github.com/llama-distributed/dist-turn)
#   - surd          (./cmd/surd, github.com/llama-distributed/surd)
#
# The C++ binaries (dist-node, dist-coordinator, dist-client, dist-cli,
# nat-portmap) keep their CMake build for now — migrating llama.cpp's
# vendored CMake tree to Bazel is out of scope for P19.  Bazel here is
# the *artifact-shipping* layer: reproducible Go builds, deterministic
# OCI images, and cosign signatures for supply-chain integrity.
#
# Why bzlmod instead of WORKSPACE: WORKSPACE is on the deprecation
# track (Bazel 9 removes it) and bzlmod gives proper semver dep
# resolution.  All deps below are pinned by version + integrity hash.

module(
    name = "llama_distributed",
    version = "0.1.0",
)

# ─── Toolchains ────────────────────────────────────────────────────
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.39.1")
bazel_dep(name = "rules_oci", version = "2.0.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "aspect_bazel_lib", version = "2.9.4")

# ─── Go toolchain ──────────────────────────────────────────────────
# Pin the Go SDK to match the go.mod toolchain directive across the
# three modules (1.25.x).  rules_go's nogo binary is wired in via the
# .bazelrc analysis-test layer (see `--@io_bazel_rules_go//go/config:nogo`).
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.8")

# ─── Go module dependencies ────────────────────────────────────────
# Each Go module gets its own go.mod parsed by gazelle.  Gazelle then
# generates BUILD.bazel files under each module root.
#
# To refresh after adding/removing imports:
#   bazel run //:gazelle
#   bazel run //:gazelle-update-repos
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//server:go.mod")
go_deps.from_file(go_mod = "//cmd/dist-turn:go.mod")
go_deps.from_file(go_mod = "//cmd/surd:go.mod")

# The set of repos Gazelle is allowed to materialise; keep this list
# explicit so an attacker who can land a PR can't quietly add a new
# upstream into the build graph.  Refresh via `bazel mod tidy`.
use_repo(
    go_deps,
    "com_github_alicebob_miniredis_v2",
    "com_github_coder_websocket",
    "com_github_coreos_go_oidc_v3",
    "com_github_mattn_go_sqlite3",
    "com_github_pion_stun_v2",
    "com_github_pion_turn_v3",
    "com_github_redis_go_redis_v9",
    "in_gopkg_yaml_v3",
)

# ─── OCI base images ───────────────────────────────────────────────
# Pin distroless by digest, not tag.  When Google rotates a tag the
# digest changes; pinning ensures the produced image is byte-identical
# across builds (a precondition for cosign signatures to remain valid).
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    # 2025-Q1 nonroot/static rev — refresh quarterly.
    digest = "sha256:786007f631d22e8a1a5084c5b177352d9dcac24b1e8c815187750f70b24a9fc6",
    image = "gcr.io/distroless/base-debian12",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
oci.pull(
    name = "distroless_cc",
    digest = "sha256:c53c9416a1acdbfd6e09abba720442f042285d2c00fde6c80a01ddb02ce93eaf",
    image = "gcr.io/distroless/cc-debian12",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(
    oci,
    "distroless_base",
    "distroless_base_linux_amd64",
    "distroless_base_linux_arm64",
    "distroless_cc",
    "distroless_cc_linux_amd64",
    "distroless_cc_linux_arm64",
)
