# dist-turn — TURN relay (sidecar + standalone modes).  See
# cmd/dist-turn/main.go header for the operating-mode contract.

load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("//tools:oci.bzl", "dist_go_image")

go_library(
    name       = "dist_turn_lib",
    srcs       = ["main.go"],
    importpath = "github.com/llama-distributed/dist-turn",
    visibility = ["//visibility:private"],
    deps       = [
        # Filled in by `bazel run //:gazelle`.
        # Expected: pion/turn, pion/stun, coder/websocket.
    ],
)

go_test(
    name     = "dist_turn_test",
    srcs     = glob(["*_test.go"], allow_empty = True),
    embed    = [":dist_turn_lib"],
    visibility = ["//visibility:public"],
)

go_binary(
    name        = "dist-turn",
    embed       = [":dist_turn_lib"],
    gc_linkopts = ["-s", "-w"],
    x_defs = {
        "main.gitSHA":    "{STABLE_GIT_SHA}",
        "main.buildDate": "{STABLE_BUILD_DATE}",
    },
    visibility  = ["//visibility:public"],
)

# Image runs as PID 1 with the standalone-mode CLI; sidecar deploys
# pass --auth-secret via ENV (DIST_TURN_AUTH_SECRET) which dist-node
# reads and forwards into the entrypoint args at runtime.
dist_go_image(
    name       = "dist-turn",
    binary     = ":dist-turn",
    repository = "ghcr.io/llama-distributed/dist-turn",
    ports      = ["3478", "5349"],
    env = {
        "DIST_TURN_LISTEN": "0.0.0.0:3478",
        "DIST_TURN_REALM":  "dist",
    },
    labels = {
        "org.opencontainers.image.source":      "https://github.com/AryanLuharuwala/llama-distributed",
        "org.opencontainers.image.licenses":    "MIT",
        "org.opencontainers.image.description": "pion/turn-based TURN relay for the llama-distributed swarm",
    },
    visibility = ["//visibility:public"],
)
