# surd — operator CLI (Go).  Not packaged as an OCI image; shipped as
# a static binary in GitHub releases.  Bazel build replaces the legacy
# `go build` invocation so release SHA + date are stamped consistently
# across all dist-* binaries.

load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name       = "surd_lib",
    srcs       = ["main.go"],
    importpath = "github.com/llama-distributed/surd",
    visibility = ["//visibility:private"],
)

go_test(
    name     = "surd_test",
    srcs     = glob(["*_test.go"], allow_empty = True),
    embed    = [":surd_lib"],
    visibility = ["//visibility:public"],
)

go_binary(
    name        = "surd",
    embed       = [":surd_lib"],
    gc_linkopts = ["-s", "-w"],
    x_defs = {
        "main.gitSHA":    "{STABLE_GIT_SHA}",
        "main.buildDate": "{STABLE_BUILD_DATE}",
    },
    # Static binary by default — surd has no CGO deps and runs on
    # alpine, scratch, or air-gapped CI runners.
    pure        = "on",
    static      = "on",
    visibility  = ["//visibility:public"],
)
