load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# cosign-sign — wrapper script invoked by `dist_go_image` to sign an
# OCI image after Bazel builds it.  The actual cosign binary is found
# on $PATH at runtime; we don't vendor it.  See README.md for why.
sh_binary(
    name       = "cosign-sign",
    srcs       = ["cosign-sign.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name       = "cosign-verify",
    srcs       = ["cosign-verify.sh"],
    visibility = ["//visibility:public"],
)

exports_files([
    "cosign-sign.sh",
    "cosign-verify.sh",
    "github-actions-sign.yaml",
])
